<resources>
    <string name="app_name">Homework Input Controls</string>
    <string name="toppings">Available Toppings</string>
    <string name="chocolate_syrup">Chocolate Syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed Nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumbles">Orio Cookie Crumbles</string>
    <string name="toast">Show Toast</string>
</resources>